==> twolfe239/ADHF21_EM/Src/ssd1306.c <==
#include "ssd1306.h"

uint8_t ssd1306_Init(void) {
	/* Check if LCD connected to I2C */
	if (HAL_I2C_IsDeviceReady(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 5, 1000)
			!= HAL_OK) {
		SSD1306.Initialized = 0;
		/* Return false */
		return 0;
	}

	// Wait for the screen to boot
	HAL_Delay(100);

	/* Init LCD */
	ssd1306_WriteCommand(DISPLAYOFF);
	ssd1306_WriteCommand(SETDISPLAYCLOCKDIV);
	ssd1306_WriteCommand(0xF0); // Increase speed of the display max ~96Hz
	ssd1306_WriteCommand(SETMULTIPLEX);
	ssd1306_WriteCommand(height() - 1);
	ssd1306_WriteCommand(SETDISPLAYOFFSET);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SETSTARTLINE);
	ssd1306_WriteCommand(CHARGEPUMP);
	ssd1306_WriteCommand(0x14);
	ssd1306_WriteCommand(MEMORYMODE);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SEGREMAP);
	ssd1306_WriteCommand(COMSCANINC);
	ssd1306_WriteCommand(SETCOMPINS);

	if (display_geometry == GEOMETRY_128_64) {
		ssd1306_WriteCommand(0x12);
	} else if (display_geometry == GEOMETRY_128_32) {
		ssd1306_WriteCommand(0x02);
	}

	ssd1306_WriteCommand(SETCONTRAST);

	if (display_geometry == GEOMETRY_128_64) {
		ssd1306_WriteCommand(0xCF);
	} else if (display_geometry == GEOMETRY_128_32) {
		ssd1306_WriteCommand(0x8F);
	}

	ssd1306_WriteCommand(SETPRECHARGE);
	ssd1306_WriteCommand(0xF1);
	ssd1306_WriteCommand(SETVCOMDETECT); //0xDB, (additionally needed to lower the contrast)
	ssd1306_WriteCommand(0x40);	    //0x40 default, to lower the contrast, put 0
	ssd1306_WriteCommand(DISPLAYALLON_RESUME);
	ssd1306_WriteCommand(NORMALDISPLAY);
	ssd1306_WriteCommand(0x2e);            // stop scroll
	ssd1306_WriteCommand(DISPLAYON);

	// Set default values for screen object
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	SSD1306.Color = Black;

	// Clear screen
	ssd1306_Clear();

	// Flush buffer to screen
	ssd1306_UpdateScreen();

	SSD1306.Initialized = 1;

	/* Return OK */
	return 1;
}

void ssd1306_UpdateScreen(void) {
	uint8_t i;

	for (i = 0; i < 8; i++) {
		ssd1306_WriteCommand(0xB0 + i);
		ssd1306_WriteCommand(SETLOWCOLUMN);
		ssd1306_WriteCommand(SETHIGHCOLUMN);
		ssd1306_WriteData(&SSD1306_Buffer[SSD1306_WIDTH * i], width());
	}
}

void ssd1306_DrawPixel(uint8_t x, uint8_t y) {
	SSD1306_COLOR color = SSD1306.Color;

	if (x >= ssd1306_GetWidth() || y >= ssd1306_GetHeight()) {
		// Don't write outside the buffer
		return;
	}

	// Check if pixel should be inverted
	if (SSD1306.Inverted) {
		color = (SSD1306_COLOR) !color;
	}

	// Draw in the right color
	if (color == White) {
		SSD1306_Buffer[x + (y / 8) * width()] |= 1 << (y % 8);
	} else {
		SSD1306_Buffer[x + (y / 8) * width()] &= ~(1 << (y % 8));
	}
}

void ssd1306_DrawLine(int16_t x0, int16_t y0, int16_t x1, int16_t y1) {
	int16_t steep = abs(y1 - y0) > abs(x1 - x0);
	if (steep) {
		SWAP_INT16_T(x0, y0);
		SWAP_INT16_T(x1, y1);
	}

	if (x0 > x1) {
		SWAP_INT16_T(x0, x1);
		SWAP_INT16_T(y0, y1);
	}

	int16_t dx, dy;
	dx = x1 - x0;
	dy = abs(y1 - y0);

	int16_t err = dx / 2;
	int16_t ystep;

	if (y0 < y1) {
		ystep = 1;
	} else {
		ystep = -1;
	}

	for (; x0 <= x1; x0++) {
		if (steep) {
			ssd1306_DrawPixel(y0, x0);
		} else {
			ssd1306_DrawPixel(x0, y0);
		}
		err -= dy;
		if (err < 0) {
			y0 += ystep;
			err += dx;
		}
	}
}

void ssd1306_DrawRect(int16_t x, int16_t y, int16_t width, int16_t height) {
	ssd1306_DrawHorizontalLine(x, y, width);
	ssd1306_DrawVerticalLine(x, y, height);
	ssd1306_DrawVerticalLine(x + width - 1, y, height);
	ssd1306_DrawHorizontalLine(x, y + height - 1, width);
}

void ssd1306_FillRect(int16_t xMove, int16_t yMove, int16_t width,
		int16_t height) {
	for (int16_t x = xMove; x < xMove + width; x++) {
		ssd1306_DrawVerticalLine(x, yMove, height);
	}
}

void ssd1306_DrawCircle(int16_t x0, int16_t y0, int16_t radius) {
	int16_t x = 0, y = radius;
	int16_t dp = 1 - radius;
	do {
		if (dp < 0)
			dp = dp + 2 * (++x) + 3;
		else
			dp = dp + 2 * (++x) - 2 * (--y) + 5;

		ssd1306_DrawPixel(x0 + x, y0 + y);     //For the 8 octants
		ssd1306_DrawPixel(x0 - x, y0 + y);
		ssd1306_DrawPixel(x0 + x, y0 - y);
		ssd1306_DrawPixel(x0 - x, y0 - y);
		ssd1306_DrawPixel(x0 + y, y0 + x);
		ssd1306_DrawPixel(x0 - y, y0 + x);
		ssd1306_DrawPixel(x0 + y, y0 - x);
		ssd1306_DrawPixel(x0 - y, y0 - x);

	} while (x < y);

	ssd1306_DrawPixel(x0 + radius, y0);
	ssd1306_DrawPixel(x0, y0 + radius);
	ssd1306_DrawPixel(x0 - radius, y0);
	ssd1306_DrawPixel(x0, y0 - radius);
}

void ssd1306_DrawBitmap(uint8_t X, uint8_t Y, uint8_t W, uint8_t H,
		const uint8_t *pBMP) {
	uint8_t pX;
	uint8_t pY;
	uint8_t tmpCh;
	uint8_t bL;

	pY = Y;
	while (pY < Y + H) {
		pX = X;
		while (pX < X + W) {
			bL = 0;
			tmpCh = *pBMP++;
			if (tmpCh) {
				while (bL < 8) {
					if (tmpCh & 0x01)
						ssd1306_DrawPixel(pX, pY + bL);
					tmpCh >>= 1;
					if (tmpCh) {
						bL++;
					} else {
						pX++;
						break;
					}
				}
			} else {
				pX++;
			}
		}
		pY += 8;
	}
}

void ssd1306_SetCursor(uint8_t x, uint8_t y) {
	SSD1306.CurrentX = x;
	SSD1306.CurrentY = y;
}

void ssd1306_DisplayOn(void) {
	ssd1306_WriteCommand(DISPLAYON);
}

void ssd1306_DisplayOff(void) {
	ssd1306_WriteCommand(DISPLAYOFF);
}

void ssd1306_InvertDisplay(void) {
	ssd1306_WriteCommand(INVERTDISPLAY);
}

static void ssd1306_WriteCommand(uint8_t command) {
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1,
			10);
#endif
}

static void ssd1306_WriteData(uint8_t *data, uint16_t size) {
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size,
			100);
#endif
}
